--- a/app/src/main/res/layout/content_master.xml
+++ b/app/src/main/res/layout/content_master.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MasterActivity"
     tools:showIn="@layout/app_bar_master"
-    android:theme="@style/MainTheme">
+    android:theme="@style/MainTheme"
+    android:background="@color/background">
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph"
@@ -24,7 +25,6 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/graph"
         android:background="@drawable/border"
         >
     <TextView
@@ -45,8 +45,10 @@
     <ListView
         android:id="@+id/transactionsListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/balance1"
-        android:background="@color/background"/>
+        android:layout_height="match_parent"
+        android:background="@color/background"
+        android:dividerHeight="5.0sp"
+        android:divider="@color/background"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
